--- a/scb-frontend/src/components/Committee/IAOMP/iaomp.css
+++ b/scb-frontend/src/components/Committee/IAOMP/iaomp.css
@@ -120,3 +120,85 @@ width: 60%;
     margin-top: 4rem;
     }
 }
+
+.Doctor{
+    display: block;
+    position: relative;
+    margin-top: 12rem;
+    left: 2rem;
+}
+.containerIAOMP{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.outerContainer{
+    width:100vw;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+}
+.innerContainer{
+    width:75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-css-aomsi{
+    width: 16rem;
+    height: 4rem;
+    border-radius: 15px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+    /* position: relative;
+   
+    right: 10%; */
+    /* margin-right: 5rem;
+    margin-bottom: 5rem; */
+   
+}
+
+.aomsi-heading{
+    /* position: relative;
+    left: 35%;
+    top: 4rem; */
+    color: #149BFC;
+    padding-bottom: 2rem;
+}
+.outerContainer{
+    width:100vw;
+    max-width:100%;
+}
+.pd-1{
+    padding-bottom: 2rem;
+}
+
+@media screen and (max-width:600px) {
+    .innerContainer{
+        flex-direction: column;
+
+    }
+    /* .aomsi-heading{
+        position: relative;
+        left: 2%;
+    } */
+    .Doctor{
+position: relative;
+left: 7.5rem;
+margin-right: 0rem;
+width: 70%;
+    }
+/* .btn-css-aomsi{
+    position: relative;
+    left: -7.5%;
+    bottom: 1rem;
+    margin-bottom: 0rem;
+    margin-right: 0rem;
+} */
+
+}
