--- a/scb-frontend/src/components/home.css
+++ b/scb-frontend/src/components/home.css
@@ -1,8 +1,9 @@
 .whatsapp-btn{
-    top: 35.0rem;
+    /* top: 35.0rem;
     left: 95%;
     position: fixed;
-    z-index: 100;
+    z-index: 100; */
+    display: none;
 }
 
 @media screen and (min-width:1024px) and (max-width:1280px) {
