--- a/scb-frontend/src/components/ContactUs/contact.css
+++ b/scb-frontend/src/components/ContactUs/contact.css
@@ -1,7 +1,10 @@
 .maincard{
     display: flex;
-    position: relative;
+    align-items: center;
+    justify-content: center;
+    /* position: relative; */
     left: 13%;
+
 }
 
 .maincard-1{
@@ -61,4 +64,33 @@
     .contactheading{
         width: 55%;
     }
+}
+
+.contactContainer{
+    width:100vw;
+    max-width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-bottom: 2rem;
+}
+.contactCard{
+    margin:1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:24rem;
+    height:16rem;
+    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    font-size:1.5rem;
+}
+.titleContact,.textContact{
+    text-align: center;
+}
+.contactHeader{
+    text-align: center;
 }
