--- a/scb-frontend/src/components/home.css
+++ b/scb-frontend/src/components/home.css
@@ -1,13 +1,20 @@
+.mainBody{
+    position: relative;
+}
 .whatsapp-btn{
     /* top: 35.0rem;
     left: 95%;
     position: fixed;
     z-index: 100; */
-    display: none;
+    position: fixed;
+    z-index:100;
+    bottom: 5%;
+    right: 5%;
+    /* display: none; */
 }
 
-@media screen and (min-width:1024px) and (max-width:1280px) {
+/* @media screen and (min-width:1024px) and (max-width:1280px) {
     .whatsapp-btn{
         top: 30rem;
     }
-}
+} */
