--- a/scb-frontend/src/components/Committee/AOMSI/aomsi.css
+++ b/scb-frontend/src/components/Committee/AOMSI/aomsi.css
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
    
 }
 .innerContainer{
@@ -78,4 +79,7 @@ width: 70%;
     margin-right: 0rem;
 } */
 
+}
+.fullPage{
+    overflow-x: hidden;
 }
