--- a/scb-frontend/src/components/Header/AboutSym/AboutSym.css
+++ b/scb-frontend/src/components/Header/AboutSym/AboutSym.css
@@ -86,7 +86,11 @@ width: 25%;
                     }
 
     .main-container1{
-height: 40rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 40rem;
     }
     .aboutpicture{
         position: relative;
