--- a/scb-frontend/src/components/Header/PlacesToExplore/PlacesToExplore.css
+++ b/scb-frontend/src/components/Header/PlacesToExplore/PlacesToExplore.css
@@ -62,11 +62,15 @@ margin-top: 5rem;
 
 
 @media screen and (max-width:600px) {
+
    .placesCard
    {
     display: block;
     position: relative;
     left: 5%;
+    align-items: center;
+    justify-content: center;
+    padding-left: 4.5rem;
    }
 
    .Heading-para{
@@ -78,7 +82,7 @@ margin-top: 5rem;
     border-radius: 15px;
     width: 20rem;
     height: 16rem;
-    margin-left: 7rem;
+    margin-left: 0rem;
     margin-bottom: 1rem;
 
 }
@@ -87,11 +91,12 @@ margin-top: 5rem;
     position: relative;
     left: -4rem;
 }
-.Heading-1{
+
+.Heading-1 {
     width: 60%;
-    margin-top: 16rem;
+    margin-top: 5rem;
     position: relative;
-    right: -11rem;
+    right: -10rem;
     top: -2rem;
 }
 
