--- a/scb-frontend/src/components/home.css
+++ b/scb-frontend/src/components/home.css
@@ -18,3 +18,8 @@
         top: 30rem;
     }
 } */
+@media only screen and (max-width: 600px) {
+    .mainBody {
+        overflow-x : hidden;
+    }
+}
