--- a/scb-frontend/src/components/home.css
+++ b/scb-frontend/src/components/home.css
@@ -12,6 +12,17 @@
     right: 5%;
     /* display: none; */
 }
+.whatsapps-btn{
+    /* top: 35.0rem;
+    left: 95%;
+    position: fixed;
+    z-index: 100; */
+    position: fixed;
+    z-index:100;
+    bottom: 12%;
+    right: 5%;
+    /* display: none; */
+}
 
 /* @media screen and (min-width:1024px) and (max-width:1280px) {
     .whatsapp-btn{
